# agentic-temporal-wf

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pattern-c-architecture-spec.html  pyproject.toml
.claude/: settings.json  worker-settings.json
docs/: pattern-c-platform.md
docs/superpowers/plans/: 2026-05-25-claude-agent-sdk-conversion.md  2026-05-25-temporal-pydantic-pr-autofix.md  2026-05-26-temporal-pattern-c-full.md
docs/superpowers/specs/: 2026-05-25-claude-agent-sdk-conversion-design.md  2026-05-25-temporal-pydantic-pr-autofix-design.md
observability/: otel-collector.yaml
plugins/tf-guardrails/: SKILL.md
plugins/tf-guardrails/.claude-plugin/: plugin.json
plugins/tf-guardrails/hooks/: hooks.json  restrict_paths.py
plugins/tf-mitigations/: SKILL.md
sandbox/: Dockerfile
sandbox/egress-proxy/: Dockerfile  filter  tinyproxy.conf
scripts/: gc_orphans.py  hardening_check.py  trigger_webhook.py
src/: models.py  repo_allowlist.py  worker.py
src/activities/: agent_iteration.py  approval.py  cleanup_orphans.py  cve_check.py  idempotency.py  lifecycle.py  sandbox.py  snapshot.py
src/agent_runner/: main.py  stream_codec.py
src/agents/: pr_fixer.py
src/gateway/: app.py
src/observability/: otel.py
src/payload_storage/: s3_codec.py
src/proxy/: Dockerfile  credential_proxy.py
src/tools/: _local_repo_impl.py  _workdir.py  github_mcp.py  local_repo.py
src/workflows/: pr_autofix.py
tests/: conftest.py  test_agent_iteration.py  test_agent_runner.py  test_approval.py  test_approval_models.py  test_build_options.py  test_cleanup_orphans.py  test_credential_proxy.py  test_cve_check.py  test_gateway.py  test_github_mcp.py  test_hardening.py  test_hooks_restrict_paths.py  test_idempotency.py  test_integration_sandbox.py  test_lifecycle.py  test_local_repo_impl.py  test_local_repo_impl_sandbox.py  test_local_repo_mcp.py  test_mitigations.py  test_models.py  test_otel.py  test_plugin_load.py  test_pr_fixer_agent.py  test_repo_allowlist.py  test_s3_codec.py  test_sandbox.py  test_sdk_probe.py  test_snapshot.py  test_worker_versioning.py  test_workflow.py
(+4 files in other folders)
