[project]
name = "agent-temporal"
version = "0.1.0"
description = "PoC: PR autofix agent on Temporal + Claude Agent SDK"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.5",
    "docker>=7.0",
    # Pattern-C observability: openinference-instrumentation-claude-agent-sdk
    # captures both query() calls and ClaudeSDKClient sessions as AGENT
    # spans, with tool calls as child TOOL spans — closer to what Arize
    # expects than the raw Anthropic instrumentor.
    "openinference-instrumentation-claude-agent-sdk>=0.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "arize-otel>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live Docker daemon and the agent-sandbox image (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
